--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <h1>欢迎来到我的网站</h1>
-    <img src="./materials/images/psc.jpg" alt="风景图" width="800" height="400">
+    <img src="./materials/images/东湖岸花-水墨.jpg" alt="风景图" width="800" height="400">
     <h3>如果你来访我，我不在，请和我门外的花坐一会儿</h3>
 </body>
 <!-- <body>
